# cascade

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LAB.md  PATTERNS.md  README.md  TEST.md  run.sh  setup.sh  start-master.cmd  start-master.sh  start-replica.sh  test.sh
.github/workflows/: ci.yml
clients/: README.md
clients/go/: cascade.go  go.mod
clients/go/cmd/demo/: main.go
clients/js/: cascade.mjs
clients/python/: cascade_client.py
configs/: local-master.toml  local-replica.toml  master.docker.toml  master.toml  replica.docker.toml  replica.toml
coordination/: README.md  for-mac.md  for-pc.md  log.md
docker/: Dockerfile  docker-compose.edge.yml  docker-compose.master.yml
docker/compare/: README.md  bench-litestream.sh  bench-pg-debezium.sh  docker-compose.yml
docs/: MASTER_SETUP.md  POST.md  REPORT.md
examples/: library_local.rs
results/: cdc_overhead.json  cdc_to_olap.json  lab_olap.json  olap.json  replication.json  vector.json
src/: cdc_overhead.rs  cdc_to_olap.rs  common.rs  compare.rs  config.rs  gateway.rs  gen_synthetic.rs  index.rs  lib.rs  main.rs  node.rs  olap.rs  ollama.rs  prep_data.rs  replication.rs  report.rs  sink.rs  source.rs  sync_server.rs  vector.rs
tests/: config_cases.rs
tools/: agent.py  dash.sh  dashboard.html  fleet.example.txt  fleet.sh  mcp_server.py
