[package]
name = "cascade"
version = "0.1.0"
edition = "2021"
description = "Turso-core toolkit: set up master/replica edge nodes with CDC->OLAP and embed-once vector fan-out, from a config file or a Rust API."
license = "MIT OR Apache-2.0"
repository = "https://github.com/javaids33/cascade"
readme = "README.md"
keywords = ["turso", "sqlite", "cdc", "vector", "edge"]
categories = ["database", "command-line-utilities"]

# Library others can pull (`use cascade::{Config, Node};`).
[lib]
name = "cascade"
path = "src/lib.rs"

# The `cascade` CLI built on the library.
[[bin]]
name = "cascade"
path = "src/main.rs"

[dependencies]
turso = { version = "0.6.1", features = ["sync"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rand = "0.8"
rand_distr = "0.4"
anyhow = "1"

# B3: pure-Rust HNSW ANN index — edge vector search beyond the brute-force ceiling.
hnsw_rs = "0.3"

# Lab: HTTP client for Ollama (embeddings/generation) + Wikimedia SSE firehose.
# Pinned: reqwest >=0.12.24 pulls hyper 1.10.1, which floors on an unpublished h2 0.4.14.
reqwest = { version = "=0.12.23", features = ["json", "stream"] }
futures-util = "0.3"

# HTTP gateway so non-Rust clients (Python/JS/Go) can drive a local node.
axum = "0.7"

# Analytics sinks
duckdb = { version = "1", features = ["bundled"] }

# Lakehouse + columnar IO. arrow/parquet pinned to 57 to match iceberg 0.9.1 (single
# arrow-array in the tree); DuckDB's internal arrow stays separate (we use it arrow-free).
iceberg = "0.9.1"
iceberg-catalog-sql = "0.9.1"
arrow = "57"
arrow-array = "57"
arrow-schema = "57"
parquet = "57"
# iceberg-catalog-sql needs a sqlx runtime feature force-enabled, plus stream collection.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
futures = "0.3"

[profile.release]
opt-level = 3
